fix Estate cards min width overflow

--- a/src/pages/Estates/Estates.module.scss
+++ b/src/pages/Estates/Estates.module.scss
@@ -2,7 +2,7 @@
 
 .estates {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(min(360px, 100%), 1fr));
   grid-auto-rows: 1fr;
   gap: 20px;
 }
